# gilded-rose-python

./: .gitignore  README.md  gilded_rose.py  pyproject.toml  refactor_note.txt
scripts/: start_texttest.sh  start_unittest.sh
src/: gilded_rose.py
src/classes/: item_registry.py
src/classes/base/: item_handler_base.py
src/classes/item_handlers/: __init__.py  aged_brie_handler.py  backstage_passes_handler.py  conjured_mana_cake_handler.py  normal_handler.py  sulfuras_handler.py
tests/texttest/: config.gr  environment.gr  texttest_fixture.py
tests/unittest/: test_gilded_rose.py
